# KURSOVAYA_0.85

./: CMakeLists.txt  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Place.cpp  Place.h  main.cpp
